dataset1235/2025-2/2868285114/users/2008605748/executions/3649835072_2667036473.log
== RUN (2025-08-19 21:29:10)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:47)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:26)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:24:23)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:28:48)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:28:01)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin<2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:00)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin<2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:29:11)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:41)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:18)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:28:26)
-- CODE: 
celsius = float(input()
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input()
                   ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:23:43)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:23:42)
-- CODE: 
celsius = float(input())
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
